# rules-haskell-bzlmod-nix

./: .bazelrc  .gitignore  BUILD.bazel  Example.hs  MODULE.bazel  flake.nix  non_module_deps.bzl
